--- a/Develop/style.css
+++ b/Develop/style.css
@@ -50,6 +50,12 @@ header {
   height: 2px;
 }
 
+.card-mid::after {
+  content: " ";
+  display: block;
+  height: 4px;
+}
+
 .card-body {
   min-height: 100px;
 }
